[package]
name = "grumon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy_asset_loader = { version = "0.20.1", features = ["2d"] }
bevy-inspector-egui = "0.24"

# TODO: update it when a new release compatible with bevy 13.
bevy_ecs_ldtk = { git = "https://github.com/trouv/bevy_ecs_ldtk" }

# TODO: should be removed when a new release compatible with bevy 13.
[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
