[package]
name = "grumon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
bevy_asset_loader = { version = "0.21.0", features = ["2d"] }
bevy-inspector-egui = "0.25.0"

bevy_ecs_ldtk = { version = "0.10" }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
